Add font, style, and install instructions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="fonts/fonts.css">
   <link id="theme-style" rel="stylesheet" href="style.css">
-
   <link rel="stylesheet" href="prism/prism.css">
 </head>
 
@@ -64,8 +64,27 @@ public string GetUsername(int id)
 
   return user.FirstName;
 }
-          </code></pre>
-
+    </code></pre>
   </section>
+  <div class="tint">
+  <section>
+    <h2>Installing</h2>
+    <p>
+      TranceSQL is available on NuGet. In addition to main package, <em>TranceSQL</em>,
+      you will need to install an appropriate driver. The following drivers are available:
+    </p>
+    <ul>
+      <li>TranceSql.Postgres</li>
+      <li>TranceSql.SqlServer</li>
+      <li>TranceSql.Sqlite</li>
+      <li>TranceSql.Oracle</li>
+      <li>TranceSql.MySql</li>
+    </ul>
+  </section>
+</div>
+  <footer>
+    <span>Copyright 2018 Paul Hatcherian</span>
+  </footer>
 </body>
+
 </html>
