Tweak install notes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ public string GetUsername(int id)
   <section>
     <h2>Installing</h2>
     <p>
-      TranceSQL is available on NuGet. In addition to main package, <em>TranceSQL</em>,
+      TranceSQL is available on NuGet. In addition to main package, TranceSQL,
       you will need to install an appropriate driver. The following drivers are available:
     </p>
     <ul>
