Add features and logos

--- a/index.html
+++ b/index.html
@@ -67,23 +67,37 @@ public string GetUsername(int id)
     </code></pre>
   </section>
   <div class="tint">
+    <section>
+      <div class="image-row">
+        <img src="logos/opentracing.png" alt="OpenTracing" title="" />
+        <div style="max-width: 50%;">
+          <h3>OpenTracing Support</h3>
+          TranceSQL supports <a href="https://opentracing.io/">OpenTracing</a>,
+          automatically adding standard attributes for database operations when
+          queries are executed.
+        </div>
+      </div>
+    </section>
+  </div>
   <section>
-    <h2>Installing</h2>
+    <h3>Supported Databases</h3>
     <p>
-      TranceSQL is available on NuGet. In addition to main package, TranceSQL,
-      you will need to install an appropriate driver. The following drivers are available:
+      TranceSQL offers support for popular RDBMS vendor SQL dialects.
     </p>
-    <ul>
-      <li>TranceSql.Postgres</li>
-      <li>TranceSql.SqlServer</li>
-      <li>TranceSql.Sqlite</li>
-      <li>TranceSql.Oracle</li>
-      <li>TranceSql.MySql</li>
-    </ul>
+    <div class="logos">
+      <img class="vendor-logo" src="logos/microsoft.png" alt="Microsoft" title="" />
+      <img class="vendor-logo" src="logos/postgres.png" alt="Postgres" title="" />
+      <img class="vendor-logo" src="logos/mysql.png" alt="MySQL" title="" />
+      <img class="vendor-logo" src="logos/sqlite.png" alt="Sqlite" title="" />
+      <img class="vendor-logo" src="logos/oracle.png" alt="Oracle" title="" />
+    </div>
   </section>
-</div>
   <footer>
-    <span>Copyright 2018 Paul Hatcherian</span>
+    <span>&copy; 2018 Paul Hatcherian</span>
+    <br>
+    <small>
+      All product names, trademarks and registered trademarks are property of their respective owners.
+    </small>
   </footer>
 </body>
 
